--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,30 +9,258 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                clifford: '#da373d',
-              }
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                        btntextcolor: '#fabe4c',
+                        bgimggdf: '#A4BC46',
+                        bgimggdt: '#85A019',
+                        headerbgc: '#FFFBF0',
+                        pricecolor: '#FABE4C',
+                        bgc: 'white',
+                    }
+                }
             }
-          }
         }
-      </script>
+    </script>
 </head>
+
 <body>
-    <header >
-      <section class="container mx-auto ">
-        <div class="space-y-5">
-            <h1 class="text-5xl uppercase font-bold">
-                <span>Be the Penguins</span><br>
-                <span>of Winter</span>
-            </h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, pariatur.</p>
-            <button class="uppercase btn bg-lime-400 text-white py-3 px-7 rounded-xl">buy now</button>
-          </div>
-          <img src="images/model.png" alt="">
-      </section>
+    <header class="bg-headerbgc pb-32">
+        <nav class="container mx-auto sm:flex p-5 sm:p-10 fixed ">
+            <div>
+                <img class="sm:w-1/3 w-1/2 " src="images/logo.png" alt="">
+            </div>
+            <ul class=" invisible sm:visible w-2/4 flex justify-around ">
+                <li><a href="#" class="font-semibold hover:text-white hover:bg-lime-500 p-4 rounded">Home</a></li>
+                <li><a href="#women" class="font-semibold hover:text-white hover:bg-lime-500 p-4 rounded">Women
+                        Jacket</a></li>
+                <li><a href="#man" class="font-semibold hover:text-white hover:bg-lime-500 p-4 rounded">Man Jacket</a>
+                </li>
+                <li><a href="#offer" class="font-semibold hover:text-white hover:bg-lime-500 p-4 rounded">Offers</a>
+                </li>
+            </ul>
+
+        </nav>
+        <section class="container mx-auto">
+            <div class="sm:flex justify-around items-center p-15 pt-24">
+                <div class="space-y-5 mb-5 p-5">
+                    <h1 class="sm:text-6xl text-2xl uppercase font-bold">
+                        <span class="text-btntextcolor">Be the Penguins</span><br>
+                        <span class="text-[#020203]">of Winter</span>
+                    </h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, pariatur.</p>
+                    <button
+                        class="uppercase font-semibold btn bg-gradient-to-t from-bgimggdf to-bgimggdt text-white py-2 px-6 rounded-lg">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline" viewBox="0 0 20 20"
+                            fill="currentColor">
+                            <path
+                                d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" />
+                        </svg>
+                        buy now</button>
+                </div>
+                <div>
+                    <img class="w-1/2 sm:w-full" src="images/model.png" alt="">
+                </div>
+            </div>
+
+        </section>
     </header>
-    
+    <main class="container mx-auto bg-bgc ">
+        <section id="women" class="mb-5 mt-5">
+
+            <div class="sm:mx-24">
+                <h2 class="sm:text-5xl text-3xl font-bold uppercase pb-3">Woman Jacket</h2>
+                <div class="grid lg:grid-cols-3 sm:grid-cols-2 gap-7">
+                    <div class="p-8 shadow-lg rounded-2xl ">
+                        <div class="bg-slate-100 p-12 rounded-2xl">
+                            <img class="" src="images/jacket-1.png" alt="">
+                        </div>
+                        <h3 class="text-2xl font-bold">Yellow Coat Jacket </h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, neque.</p>
+
+                        <div class="flex justify-between ">
+
+                            <h1 class="text-4xl font-bold text-pricecolor">$234</h1>
+                            <button
+                                class="uppercase font-semibold btn bg-gradient-to-t from-bgimggdf to-bgimggdt text-white py-2 px-6 rounded-lg">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline" viewBox="0 0 20 20"
+                                    fill="currentColor">
+                                    <path
+                                        d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" />
+                                </svg>
+                                buy now</button>
+
+                        </div>
+                    </div>
+                    <div class="p-8 shadow-lg rounded-2xl ">
+                        <div class="bg-slate-100 p-12 rounded-2xl">
+                            <img src="images/jacket-2.png" alt="">
+                        </div>
+                        <h3 class="text-2xl font-bold">Ladies Jacket </h3>
+                        <p>Lorem ipsum dolor sit amet consecteturb <br> adipisicing elit. Atque, neque.</p>
+
+                        <div class="flex justify-between ">
+
+                            <h1 class="text-4xl font-bold text-pricecolor">$234</h1>
+                            <button
+                                class="uppercase font-semibold btn bg-gradient-to-t from-bgimggdf to-bgimggdt text-white py-2 px-6 rounded-lg">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline" viewBox="0 0 20 20"
+                                    fill="currentColor">
+                                    <path
+                                        d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" />
+                                </svg>
+                                buy now</button>
+
+                        </div>
+                    </div>
+                    <div class="p-8 shadow-lg rounded-2xl ">
+                        <div class="bg-slate-100 p-12 rounded-2xl">
+                            <img src="images/jacket-3.png" alt="">
+                        </div>
+                        <h3 class="text-2xl font-bold">Women Lather Jacket </h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, neque.</p>
+
+                        <div class="flex justify-between ">
+
+                            <h1 class="text-4xl font-bold text-pricecolor">$234</h1>
+                            <button
+                                class="uppercase font-semibold btn bg-gradient-to-t from-bgimggdf to-bgimggdt text-white py-2 px-6 rounded-lg">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline" viewBox="0 0 20 20"
+                                    fill="currentColor">
+                                    <path
+                                        d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" />
+                                </svg>
+                                buy now</button>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="man" class="mb-10">
+
+            <div class="sm:mx-24">
+                <h2 class="sm:text-5xl text-3xl font-bold uppercase pb-3">Man Jacket</h2>
+                <div class="grid lg:grid-cols-3 sm:grid-cols-2 gap-7">
+                    <div class="p-8 shadow-lg rounded-2xl ">
+                        <div class="bg-slate-100 p-12 rounded-2xl">
+                            <img class="" src="images/jacket-4.png" alt="">
+                        </div>
+                        <h3 class="text-2xl font-bold">Snowboard Jacket Mens
+                        </h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, neque.</p>
+
+                        <div class="flex justify-between ">
+
+                            <h1 class="text-4xl font-bold text-pricecolor">$234</h1>
+                            <button
+                                class="uppercase font-semibold btn bg-gradient-to-t from-bgimggdf to-bgimggdt text-white py-2 px-6 rounded-lg">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline" viewBox="0 0 20 20"
+                                    fill="currentColor">
+                                    <path
+                                        d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" />
+                                </svg>
+                                buy now</button>
+
+                        </div>
+                    </div>
+                    <div class="p-8 shadow-lg rounded-2xl ">
+                        <div class="bg-slate-100 p-12 rounded-2xl">
+                            <img src="images/jacket-5.png" alt="">
+                        </div>
+                        <h3 class="text-2xl font-bold">Man Leather Jackets
+                        </h3>
+                        <p>Lorem ipsum dolor sit amet consecteturb <br> adipisicing elit. Atque, neque.</p>
+
+                        <div class="flex justify-between ">
+
+                            <h1 class="text-4xl font-bold text-pricecolor">$234</h1>
+                            <button
+                                class="uppercase font-semibold btn bg-gradient-to-t from-bgimggdf to-bgimggdt text-white py-2 px-6 rounded-lg">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline" viewBox="0 0 20 20"
+                                    fill="currentColor">
+                                    <path
+                                        d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" />
+                                </svg>
+                                buy now</button>
+
+                        </div>
+                    </div>
+                    <div class="p-8 shadow-lg rounded-2xl ">
+                        <div class="bg-slate-100 p-12 rounded-2xl">
+                            <img src="images/jacket-6.png" alt="">
+                        </div>
+                        <h3 class="text-2xl font-bold">Man Casual Jackets
+                        </h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, neque.</p>
+
+                        <div class="flex justify-between ">
+
+                            <h1 class="text-4xl font-bold text-pricecolor">$234</h1>
+                            <button
+                                class="uppercase font-semibold btn bg-gradient-to-t from-bgimggdf to-bgimggdt text-white py-2 px-6 rounded-lg">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline" viewBox="0 0 20 20"
+                                    fill="currentColor">
+                                    <path
+                                        d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" />
+                                </svg>
+                                buy now</button>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="container mx-auto " id="offer">
+            <div class="grid sm:grid-cols-2 sm:gap-7 sm:mx-24">
+
+                <div class=" sm:hidden visible row-span-3 flex items-center pb-8 sm:p-0"><img src="images/shopping.png" alt=""></div>
+                <div class="h-32 flex items-center p-4 shadow-xl rounded-lg ">
+                    <img class="h-24" src="images/house.png" alt="">
+
+                    <div class="ml-2">
+                        <h4 class="text-3xl font-bold">Find the Perfect Fit</h4>
+                        <p>Everybody is different, which is why we offer styles for every body.</p>
+                    </div>
+                </div>
+                <div class=" hidden sm:grid row-span-3 flex items-center"><img src="images/shopping.png" alt=""></div>
+
+                <div class="h-32 flex items-center p-4 shadow-xl rounded-lg ">
+                    <img class="h-24" src="images/box.png" alt="">
+                    <div class="ml-2">
+                        <h4 class="text-3xl font-bold">Free Exchanges
+                        </h4>
+                        <p>One of the many reasons you can shop
+
+                            with peace of mind.</p>
+                    </div>
+                </div>
+                <div class="h-32 flex items-center p-4 shadow-xl rounded-lg ">
+                    <img class="h-24" src="images/question.png" alt="">
+                    <div class="ml-2">
+                        <h4 class="text-3xl font-bold">Contact Our Seller
+                        </h4>
+                        <p>They are here to help you. That's quite
+
+                            literally what we pay them for</p>
+                    </div>
+                </div>
+
+
+
+            </div>
+
+        </section>
+    </main>
+
 </body>
+<footer class="container mx-auto mt-20 text-center">
+    @2023 a Moniruzzaman's Initiative
+
+</footer>
+
 </html>
